--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/icons": "^1.0.0",
     "material-ui-icons": "^1.0.0-beta.36",
     "materialize-css": "^1.0.0-rc.1",
     "moment": "^2.22.1",
