--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,10 @@
     "react-places-autocomplete": "^7.1.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
+    "react-sanfona": "^1.2.2",
     "react-scripts": "1.1.4",
+    "react-typist": "^2.0.4",
+    "reactjs-popup": "^1.1.1",
     "redux": "^4.0.0"
   },
   "scripts": {
