--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "nodemon": "^1.17.3",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
+    "react": "^16.4.0",
     "redux-thunk": "^2.2.0"
   }
 }
