--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/icons": "^1.0.0",
+    "axios": "^0.18.0",
     "material-ui-icons": "^1.0.0-beta.36",
     "materialize-css": "^1.0.0-rc.1",
     "moment": "^2.22.1",
